--- a/src/style/iconfont.less
+++ b/src/style/iconfont.less
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2882191 */
-  src: url('//at.alicdn.com/t/font_2882191_jek40in1p0p.woff2?t=1644473086694') format('woff2'),
-       url('//at.alicdn.com/t/font_2882191_jek40in1p0p.woff?t=1644473086694') format('woff'),
-       url('//at.alicdn.com/t/font_2882191_jek40in1p0p.ttf?t=1644473086694') format('truetype');
+  src: url('//at.alicdn.com/t/font_2882191_0ahajzxtir6q.woff2?t=1649230395401') format('woff2'),
+       url('//at.alicdn.com/t/font_2882191_0ahajzxtir6q.woff?t=1649230395401') format('woff'),
+       url('//at.alicdn.com/t/font_2882191_0ahajzxtir6q.ttf?t=1649230395401') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-yinle:before {
+  content: "\e69e";
 }
 
 .icon-yonghuguanli-yonghuguanli:before {
